tests/baselines/reference/asyncFunctionDeclaration7_es2017.errors.txt
asyncFunctionDeclaration7_es2017.ts(3,26): error TS2524: 'await' expressions cannot be used in a parameter initializer.
asyncFunctionDeclaration7_es2017.ts(3,31): error TS1109: Expression expected.


==== asyncFunctionDeclaration7_es2017.ts (2 errors) ====
    async function bar(): Promise<void> {
      // 'await' here is an identifier, and not a yield expression.
      async function foo(a = await): Promise<void> {
                             ~~~~~
!!! error TS2524: 'await' expressions cannot be used in a parameter initializer.
                                  ~
!!! error TS1109: Expression expected.
      }
    }